--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
-  "name": "slug-component",
+  "name": "yields-slug",
   "description": "slug generator",
   "version": "1.1.0",
-  "author": "Amir Abu Shareb <yields@icloud.com>",
+  "keywords": [
+    "slug"
+  ],
+  "dependencies": {},
   "license": "MIT"
 }
